5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1644_1054.log
== TEST (2019-04-09 17:07:02) 
-- CODE:
varx= float(input("x: "))
vary= float(input("y: "))

if (2*varx + vary = 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 4
    if (2*varx + vary = 3):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:07:43) 
-- CODE:
varx= float(input("x: "))
vary= float(input("y: "))

if (2*varx + vary = 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 4
    if (2*varx + vary = 3):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:08:35) 
-- CODE:
varx= float(input("Valor de x: "))
vary= float(input("Valor de y: "))

if (2*varx + vary = 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 4
    if (2*varx + vary = 3):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:09:09) 
-- CODE:
varx= float(input("Valor de x: "))
vary= float(input("Valor de y: "))

if ((2*varx) + vary = 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 4
    if ((2*varx) + vary = 3):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:10:52) 
-- CODE:
varx= float(input("Valor de x: "))
vary= float(input("Valor de y: "))

if ((2*varx) + vary = 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 4
    if ((2*varx) + vary = 3):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:10:54) 
-- CODE:
varx= float(input("Valor de x: "))
vary= float(input("Valor de y: "))

if ((2*varx) + vary = 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- EXECUTION TIME:
0.149214
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 4
    if ((2*varx) + vary = 3):
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:11:44) 
-- CODE:
varx= float(input("Valor de x: "))
vary= float(input("Valor de y: "))

if ((2*varx) + vary = 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 4
    if ((2*varx) + vary = 3):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:16:35) 
-- CODE:
varx= float(input("Valor de x: "))
vary= float(input("Valor de y: "))

if ((2*varx) + vary = 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- ERROR:
File "XXXX", line 4
    if ((2*varx) + vary = 3):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:17:18) 
-- CODE:
varx= float(input("Valor de x: "))
vary= float(input("Valor de y: "))

if ((2*varx) + vary == 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:34) 
-- CODE:
varx= float(input("Valor de x: "))
vary= float(input("Valor de y: "))

if ((2*varx) + vary == 3):
	print("ponto pertence a reta")
	
else:
	print("ponto nao pertence a reta")

-- EXECUTION TIME:
0.144774
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
